# Cinema_Hoort

./: .gitignore  README.md  docker-compose.yaml
cinema/: .coverage  .env_template  Dockerfile  README.md  pyproject.toml
cinema/config/: settings.py  urls.py  utils.py
cinema/films/: admin.py  apps.py  models.py  serializers.py  views.py
cinema/films/management/commands/: import_tmdb.py
cinema/tests/: test_api.py  test_movies.py
