[project]
name = "films"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexianeBA",email = "barbealexiane07@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",

]

[tool.poetry]
packages = [{include = "films"}]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"

isort = ">=6.0.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
